Fix to CURRIKI-3066 - tweaking the spacing a bit on the expand arrows
svn@13824

--- a/web/src/main/webapp/skins/curriki8/style2.css
+++ b/web/src/main/webapp/skins/curriki8/style2.css
@@ -946,12 +946,12 @@ input#search-termPanel-resource-terms, input#search-termPanel-group-terms, input
 	background-position:3px 2px;
 }
 #search-tabPanel .x-grid3-row-expanded .x-grid3-row-expander, #search-div .x-grid3-row-expanded .x-grid3-row-expander {
-	background-position:3px -12px;
+	background-position:3px -14px;
 }
 #search-tabPanel .x-grid3-row-expander, #search-div .x-grid3-row-expander {
 	background-image:url(/xwiki/skins/curriki8/images/adv-search-expand-sprite.gif);
 	background-position:3px 2px;
-	height:15px;
+	height:16px;
 	width:100%;
 }
 
